fix detail modal chips overflow

--- a/client/src/app/entry/dialogs/task-detail-dialog/task-detail-dialog.component.scss-theme.scss
+++ b/client/src/app/entry/dialogs/task-detail-dialog/task-detail-dialog.component.scss-theme.scss
@@ -43,6 +43,13 @@
   }
 
   .detail-list-item {
+    .mat-chip {
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      max-width: 242px;
+      overflow: hidden;
+    }
+
     .autocomplete-chips {
       .mat-form-field-infix {
         border-top: 0;
